[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/scenes/recipes/page_recipe_edit/PageRecipeEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/explore/Explore.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/main.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/item_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/scenes/recipes/page_recipe/PageRecipe.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/login/Login.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/kitchen/Kitchen.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/splash/PageSplash.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/font18.tres" type="DynamicFont" id=9]

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0.368627, 0.368627, 0.368627, 1, 0.105882, 0.105882, 0.105882, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Animation" id=12]
length = 0.001

[sub_resource type="Animation" id=13]
resource_name = "hide_recipe_page"

[sub_resource type="Animation" id=14]
resource_name = "show_recipe_page"

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=23]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=24]
resource_name = "fade_to_clear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animator:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -100

[node name="Color" type="Sprite" parent="Background"]
position = Vector2( 283.032, 500.843 )
rotation = -1.5708
scale = Vector2( 0.556933, 654.604 )
texture = SubResource( 11 )

[node name="Tabs" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashPage" parent="Tabs" instance=ExtResource( 8 )]
margin_top = 14.0

[node name="Explore" parent="Tabs" instance=ExtResource( 2 )]
visible = false

[node name="Kitchen" parent="Tabs" instance=ExtResource( 7 )]
visible = false
margin_top = 14.0

[node name="Login" parent="Tabs" instance=ExtResource( 6 )]
visible = false
margin_top = 14.0

[node name="PageRecipeEdit" parent="Tabs" instance=ExtResource( 1 )]
visible = false
margin_top = 14.0

[node name="PageRecipe" parent="Tabs" instance=ExtResource( 5 )]
visible = false
margin_top = 14.0

[node name="Animator" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/RESET = SubResource( 12 )
anims/hide_recipe_page = SubResource( 13 )
anims/show_recipe_page = SubResource( 14 )

[node name="Fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="Animator" type="AnimationPlayer" parent="Fade"]
autoplay = "fade_to_clear"
playback_speed = 3.0
anims/RESET = SubResource( 22 )
anims/fade_to_black = SubResource( 23 )
anims/fade_to_clear = SubResource( 24 )

[node name="Exit" type="Button" parent="."]
margin_left = 537.0
margin_top = 5.0
margin_right = 569.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "X"

[node name="Title" type="Button" parent="."]
margin_left = 229.0
margin_top = 17.0
margin_right = 327.0
margin_bottom = 47.0
rect_scale = Vector2( 1.00486, 1.5933 )
text = "Welcome"

[node name="Navigation_Bar" type="GridContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -80.0
rect_pivot_offset = Vector2( 259, 56 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
columns = 3

[node name="Explore" type="Button" parent="Navigation_Bar"]
modulate = Color( 0.168627, 0.505882, 0.823529, 1 )
margin_right = 189.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 9 )
text = "Explore"

[node name="Kitchen" type="Button" parent="Navigation_Bar"]
margin_left = 193.0
margin_right = 382.0
margin_bottom = 80.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 9 )
text = "Kitchen"

[node name="User_Account" type="Button" parent="Navigation_Bar"]
modulate = Color( 0.168627, 0.505882, 0.823529, 1 )
margin_left = 386.0
margin_right = 575.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 9 )
text = "Profile"

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Navigation_Bar/Explore" to="." method="_on_Explore_pressed"]
[connection signal="pressed" from="Navigation_Bar/Kitchen" to="." method="_on_Kitchen_pressed"]
[connection signal="pressed" from="Navigation_Bar/User_Account" to="." method="_on_User_Account_pressed"]
